Bug 405276 - Unable to switch television channels by shortcuts
Summary: Unable to switch television channels by shortcuts
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.16-2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Antoni Bella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-09 18:18 UTC by higuita
Modified: 2019-03-14 20:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Solve next and previous items (563 bytes, patch)
2019-03-14 18:28 UTC, Antoni Bella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description higuita 2019-03-09 18:18:44 UTC
SUMMARY
Using a DVB-T ysb device i can setup all the channels list and i can switch manually using the mouse. Yet, when i press Page-Up or Page-Down, the kaffeine do not switch to the prev or next channel. Using qbus commands for Prev and Next have the same result. 

I'm using the git version, previous version i used was 1.3 and this worked without any problem


STEPS TO REPRODUCE
1. Setup channels, play one of then
2. press page-up or send the qdbus org.mpris.kaffeine /Player Prev (or down/Next)

OBSERVED RESULT
No channel switch, television is not responding to playlist change like it was in 1.3 version

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 higuita 2019-03-10 04:46:06 UTC
Opps, i forgot this info


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Slackware64 -current
KDE Plasma Version: 5.15.0
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1

Thanks in advance for the help
Comment 2 higuita 2019-03-13 23:41:56 UTC
Updating with a little more info

Starting kaffeine with -d do not show anything useful

While playing a channel, doing 
 qdbus org.mpris.kaffeine /Player Prev
 qdbus org.kde.kaffeine /Player Prev

Doesn't do anything, nor pressing page-up (or Next/page down)

but doing
 qdbus org.mpris.kaffeine /Player Stop
 qdbus org.mpris.kaffeine /MainApplication quit 

do work fine (org.kde.kaffeine also work)

i'm using libvlc backend and i tried to followed the code until
VlcMediaWidget::jumpToNextChapter(), but yep, i'm totally lost! :D
Comment 3 Antoni Bella 2019-03-14 18:28:24 UTC
Created attachment 118808 [details]
Solve next and previous items


Confirmed. This Pull request from GitHub, damage the funcionality of Kaffeine app:

    -- These icons or menu items do not work:
        * Next / Previous

https://github.com/KDE/kaffeine/pull/3

#-
commit ef66906e3d3fda0144e18ed874c32266c1347ab1
vlcmediawidget: fix audio CD playing

While here, also fix:
    - all tracks playing
    - 'next' & 'previous' working
#-
My patch revert problematic code to old code.

Prove and apply you this patch urgently for next version.

Regards
Comment 4 Mauro Carvalho Chehab 2019-03-14 19:55:20 UTC
Git commit ab5655ef3e9727ad26e7c095d79a64ce4e8b7b28 by Mauro Carvalho Chehab.
Committed on 14/03/2019 at 19:52.
Pushed by mauroc into branch 'master'.

mediawidget: fix a regression with next/previous logic

A fix at the CD handing code broke for other sources.

After this fix, both prev/next buttons work and also the DBUS
equivalent logic:

	qdbus org.mpris.kaffeine /Player Prev
	qdbus org.kde.kaffeine /Player Prev

Thanks to Antoni Bella for identifying the broken commit and
addressing it.

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>

M  +2    -2    src/mediawidget.cpp

https://commits.kde.org/kaffeine/ab5655ef3e9727ad26e7c095d79a64ce4e8b7b28
Comment 5 Mauro Carvalho Chehab 2019-03-14 19:56:34 UTC
Thank you both for reporting and finding this issue. Fixup applied.
Comment 6 Wolfgang Bauer 2019-03-14 20:21:16 UTC
But now switching to the next/previous Audio CD track is broken... :-/