mediawidget: fix a regression with next/previous logic

A fix at the CD handing code broke for other sources.

After this fix, both prev/next buttons work and also the DBUS
equivalent logic:

	qdbus org.mpris.kaffeine /Player Prev
	qdbus org.kde.kaffeine /Player Prev

Thanks to Antoni Bella for identifying the broken commit and
addressing it.

BUG: 405276

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>